--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     max-width: 80ch;
     padding: 1rem;
-    margin: 0 auto;
+    margin: 1rem auto;
     border: 1px solid grey;
 }
 
